clusters/calcifer-cloud/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
